--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,8 @@
     grid-template-columns: repeat(3, 336px);
     gap: 32px;
 }
+
+.channel-categories {
+    display: flex;
+    justify-content: space-between;
+}
