--- a/src/components/chanelCard/ChanelCard.module.css
+++ b/src/components/chanelCard/ChanelCard.module.css
@@ -1,20 +1,21 @@
-.box {
-    background: #F7F7F7;
-    box-shadow: 0px 6px 30px rgba(65, 84, 152, 0.08);
-    border-radius: 12px;
+.chanel {
     width: 152px;
     height: 158px;
-    
+    background-color: #F7F7F7;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 38px;
 }
 
-.chanelText {
+
+.chanelTitle {
     font-size: 16px;
     font-weight: 700;
     line-height:24px;
+    margin-top: 27px;
+    margin-bottom: 16px;
 }
 
-.logo {
-    width: 56px;
-    height: 55px;
-    object-fit: cover;
-}
