--- a/src/components/newsCard/NewsCard.module.css
+++ b/src/components/newsCard/NewsCard.module.css
@@ -1,6 +1,14 @@
+.newsCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 336px;
+}
+
 .newsPic {
     background-color: #C4C4C4;
     border-radius: 15px;
+    margin-bottom: 16px;
 }
 
 .newsTitle {
@@ -12,4 +20,18 @@
 
 .newsInner {
     display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.newsBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px; 
+}
+
+.newsBox:nth-child(2) {
+    min-width: 75px;
 }
