--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 .main {
     grid-area: c;
-    padding: 32px;
+    padding-left: 32px;
 }
 
 .block-content {
@@ -34,6 +34,9 @@
     justify-content: space-between;
 }
 
+.news {
+    margin-top: 38px;
+}
 
 .news-wrapper {
     display: flex;
