--- a/src/App.css
+++ b/src/App.css
@@ -46,10 +46,66 @@
 
 .navigation {
     padding-top: 30px;
+    display: flex;
 }
 
 .navigation-left {
     display: flex;
     justify-content: space-between;
     width: 500px;
+    margin-right: 62px;
+}
+
+
+.navigation-right {
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-form {
+    position: relative;
+
+}
+
+.header-input {
+    border-style: none;
+    width: 385px;
+    height: 48px;
+    padding-left: 50px;
+    border-radius: 10px;
+    background: #F7F7F7;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #626264;
+}
+
+.header-form::before {
+    background-image: url('./assets/images/search.svg');
+    position: absolute;
+    display: block;
+    content:"";
+    background-repeat: no-repeat;
+    top: 14px;
+    left: 18px;
+    width: 20px;
+    height: 20px;
+}
+
+.header-input:active, :focus {
+    outline:none;
+}
+
+.header-btn {
+    width: 48px;
+    height: 48px;
+    margin: 0px 16px 0px 16px;
+}
+
+.client-img {
+    width: 48px;
+    height: 48px;
 }
