--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,7 @@
 .sidebar {
     grid-area: s;
     background-color: #F8F8F8;
-    width: 304px;
     border-radius: 0px 24px 24px 0px;
-   
 }
 
 .main {
@@ -120,17 +118,13 @@
 .logo-wrapper {
     display: flex;
     justify-content: center;
+    margin-bottom: 33px;
 }
 
 .sidebar-top {
     display: flex;
     flex-direction: column;
-    padding: 33px 16px 32px;
-}
-
-.navigation-wrapper {
-    width: 272px;
-    height: 472px;
+    padding: 33px 15px 32px;
 }
 
 .navigationList {
@@ -138,6 +132,10 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    width:272px;
+    height: 472px;
+    margin: 0;
+    padding-left: 15px;
 }
 
 .navigationLink {
