--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -1,19 +1,19 @@
 .navigationWrapper {
-    width: 272px;
-    height: 56px;
+    /* width: 272px;
+    height: 56px; */
     background-color: transparent;
     border-radius: 12px;
     display: flex;
     align-items: center;
-    padding: 16px;
+    
 }
 
 .navigationWrapper:hover {
     background-color: #a097ca;
-}
+} 
 
 .navigationWrapper:hover .navigationTitle {
-    color: #503E9D;
+    color: #503E9D; 
 }
 
 .navigationTitle {
@@ -26,7 +26,8 @@
     margin-left: 24px;
 }
 
-.NavigationItem {
+.navigationItem {
     display: flex;
     align-items: center;
+    padding: 0 15px 0 15px;
 }
