--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,10 @@
     padding-left: 15px;
 }
 
+.navigationList:last-child {
+    margin-top: 30px;
+}
+
 .navigationLink {
     text-decoration: none;
 }
