--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,13 @@
     padding: 33px 15px 32px;
 }
 
+.navigationBox {
+    width: 272px;
+    height: 472px;
+    display: flex;
+    flex-direction: column;
+}
+
 .navigationList {
     list-style: none;
     display: flex;
@@ -136,35 +143,72 @@
     height: 472px;
     margin: 0;
     padding-left: 15px;
-    border-bottom: 2px solid #E8E8E8;
 }
 
-.navigationList:last-child {
-    margin-top: 30px;
+
+
+.navigationLi:hover  {
+    color: #503E9D; 
 }
 
 .navigationLink {
     text-decoration: none;
 }
 
-.asideCard {
-    width: 240px;
-    height: 324px;
-    border-radius: 20px;
-    position: absolute;
-    background: #FFFFFF;
-    box-shadow: 0px 32px 96px -8px rgba(0, 0, 0, 0.06);
-    margin: 24px 32px 0 32px;
-
+.navigationLogout {
+    margin-top: 12px;
 }
 
-.cardWrapper {
+.asideCard {
     display: flex;
     align-items:center;
     justify-content: center;
     flex-direction: column;
-    margin-top: 32px;
+    padding-top: 32px;
+    width: 240px;
+    height: 324px;
+    border-radius: 20px;
+    position: relative;
+    background: #FFFFFF;
+    box-shadow: 0px 32px 96px -8px rgba(0, 0, 0, 0.06);
+    margin: 24px 32px 0 32px;
+    z-index: 999;
 }
+
+
+.asideCard::after {
+    content: "";
+    position: absolute;
+    /* background-image: url('./assets/images/sidebarIcons/Overlay\ -\ 2.png'); */
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    box-shadow: 0px 24px 64px -4px rgba(0, 0, 0, 0.04);
+    background: #FFFFFF;
+    top: 45px;
+    left: 15px;
+    width: 208px;
+    height: 324px;
+    z-index: -1;
+
+}
+
+.asideCard::before {
+    content: "";
+    position: absolute;
+    /* background-image: url('./assets/images/sidebarIcons/Overlay\ -\ 3.png'); */
+    background-repeat: no-repeat;
+    box-shadow: 0px 24px 64px -4px rgba(0, 0, 0, 0.04);
+    background: #FFFFFF;
+    border-radius: 20px;
+    top: 59px;
+    left: 34px;
+    width: 176px;
+    height: 324px;
+    z-index: -2;
+
+}
+
+
 
 
 .cardTitle {
@@ -177,6 +221,8 @@ text-align: center;
 color: #182135;
 max-width: 176px;
 margin-bottom: 8px;
+
+
 }
 
 .cardText {
@@ -193,9 +239,24 @@ margin-top: 0;
 margin-bottom: 32px;
 }
 
+
+.cardSpan {
+    color:#FB6D3A;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: bold;  
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    text-decoration-line: underline;
+}
+
 .cardButton {
 position: relative;
+display: flex;
+align-items: center;
 background: #503E9D;
+padding-left: 17px;
 border-radius: 10px;
 color: #FFFFFF;
 font-family: 'Open Sans';
@@ -213,8 +274,8 @@ height :48px;
     background-image: url('./assets/images/cardArrow.png');
     position: absolute;
     background-repeat: no-repeat;
-    top: 17px;
-    right: 3px;
+    top: 15px;
+    right: 12px;
     width: 16px;
     height: 13px;
 }
