--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,7 @@
     padding: 33px 15px 32px;
 }
 
-.navigationBox {
+.navigationShell{
     width: 272px;
     height: 472px;
     display: flex;
@@ -139,12 +139,11 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    width:272px;
-    height: 472px;
+    /* width:272px;
+    height: 472px; */
     margin: 0;
-    padding-left: 15px;
+    padding-left: 0px;
 }
-
 
 
 .navigationLi:hover  {
@@ -156,7 +155,7 @@
 }
 
 .navigationLogout {
-    margin-top: 12px;
+    margin-top: 95px;
 }
 
 .asideCard {
@@ -176,23 +175,23 @@
 }
 
 
-.asideCard::after {
+.asideCard::before {
     content: "";
     position: absolute;
     /* background-image: url('./assets/images/sidebarIcons/Overlay\ -\ 2.png'); */
     background-repeat: no-repeat;
     border-radius: 20px;
     box-shadow: 0px 24px 64px -4px rgba(0, 0, 0, 0.04);
-    background: #FFFFFF;
+    background: #ffffff;
     top: 45px;
     left: 15px;
     width: 208px;
     height: 324px;
-    z-index: -1;
+    z-index: -100;
 
 }
 
-.asideCard::before {
+.asideCard::after {
     content: "";
     position: absolute;
     /* background-image: url('./assets/images/sidebarIcons/Overlay\ -\ 3.png'); */
@@ -204,11 +203,9 @@
     left: 34px;
     width: 176px;
     height: 324px;
-    z-index: -2;
+    z-index: -200;
 
 }
-
-
 
 
 .cardTitle {
@@ -221,8 +218,6 @@ text-align: center;
 color: #182135;
 max-width: 176px;
 margin-bottom: 8px;
-
-
 }
 
 .cardText {
