--- a/src/components/sectionTitle/SectionTitle.module.css
+++ b/src/components/sectionTitle/SectionTitle.module.css
@@ -1,13 +1,17 @@
 .sectionTitle {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 32px;
+    margin-bottom: 35px;
     align-items: center;
     height: 32px;
 }
 
 .blockTitle {
     margin-bottom: 32px;
+}
+
+.inner {
+    padding-right: 43px;
 }
 
 .btn {
@@ -18,7 +22,7 @@
     height: 24px;
     font-weight: 600;
     font-size: 16px;
-    margin: 0px 8px;
+    /* margin: 0px 45px; */
     line-height: 24px;
     border: none;
     cursor: pointer;
