--- a/src/App.css
+++ b/src/App.css
@@ -158,6 +158,11 @@
     margin-top: 95px;
 }
 
+.sidebar-bottom {
+    position: relative;
+    z-index: 999;
+}
+
 .asideCard {
     display: flex;
     align-items:center;
@@ -167,43 +172,39 @@
     width: 240px;
     height: 324px;
     border-radius: 20px;
-    position: relative;
     background: #FFFFFF;
     box-shadow: 0px 32px 96px -8px rgba(0, 0, 0, 0.06);
     margin: 24px 32px 0 32px;
-    z-index: 999;
 }
 
 
-.asideCard::before {
+.sidebar-bottom::before {
     content: "";
     position: absolute;
-    /* background-image: url('./assets/images/sidebarIcons/Overlay\ -\ 2.png'); */
     background-repeat: no-repeat;
     border-radius: 20px;
     box-shadow: 0px 24px 64px -4px rgba(0, 0, 0, 0.04);
     background: #ffffff;
     top: 45px;
-    left: 15px;
+    left: 50px;
     width: 208px;
     height: 324px;
-    z-index: -100;
+    z-index: -1;
 
 }
 
-.asideCard::after {
+.sidebar-bottom::after {
     content: "";
     position: absolute;
-    /* background-image: url('./assets/images/sidebarIcons/Overlay\ -\ 3.png'); */
     background-repeat: no-repeat;
     box-shadow: 0px 24px 64px -4px rgba(0, 0, 0, 0.04);
     background: #FFFFFF;
     border-radius: 20px;
     top: 59px;
-    left: 34px;
+    left: 65px;
     width: 176px;
     height: 324px;
-    z-index: -200;
+    z-index: -2;
 
 }
 
